[package]
name = "artemis"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
variantly = "0.2.0"
smallstr = "0.3.0"
smallvec = "1.8.0"
anyhow = "1.0"
parking_lot = "0.12"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.59.2"

