[package]
name = "artemis"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "artemis"
path = "src/main.rs"

[lib]
name = "artemis"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
variantly = "0.2.0"
smallstr = { version = "0.3.0", default-features = false, features = [ "union" ] }
smallvec = { version = "1.8.0", default-features = false, features = [ "union" ] }
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.10.0"
pest = "2.1.3"
pest_derive = "2.1.0"
log = "0.4.16"
simple_logger = { version = "2.1.0", default-features = false, features = [ "colors" ] }

