[package]
name = "air_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
variantly = "0.2"
smallstr = { version = "0.3", default-features = false, features = [ "union" ] }
smallvec = { version = "1.8", default-features = false, features = [ "union" ] }
derive_more = "0.99"
anyhow = "1.0"
