[package]
name = "artemis"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
air_interface= { path = "../air_interface" }

rayon = "1.5"
variantly = "0.2"
smallstr = { version = "0.3", default-features = false, features = [ "union" ] }
smallvec = { version = "1.8", default-features = false, features = [ "union", "const_generics", "const_new", "write" ] }
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.10"
pest = "2.4"
pest_derive = "2.4"
log = "0.4"
backtrace = "0.3"
derive_more = "0.99"
itertools = "0.10"
