[package]
name = "artemis_gc"
version = "0.1.0"
edition = "2021"

[lib]
name = "artemis_gc"
crate-type = [ "staticlib" ]

[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
debug = false
codegen-units = 1
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
parking_lot = "0.12.1"
x86 = "0.48.0"
# aarch64 = "0.0.7"
